FIX Overflow problem

--- a/webdocs/static/css/style.css
+++ b/webdocs/static/css/style.css
@@ -105,7 +105,7 @@ nav a.active {
   display: flex;
 
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 /* Shared styles for all content panels */
@@ -128,6 +128,9 @@ nav a.active {
   
   /* For content like PDF/iframe */
   flex-direction: column;
+
+  overflow: auto;
+  max-height: none;
 }
 
 /* The active page state - simpler and without !important */
